<resources>
    <string name="app_name">康养管家</string>
    <string name="apply_for_visit">随访申请</string>
    <string name="evaluation_guide">评估报告</string>
    <string name="msg_center">消息中心</string>
    <string name="warn_notice">告警提醒</string>
    <string name="member_list">成员列表</string>
    <string name="recent_measure_time">最近测量时间:</string>
    <string name="blood_pressure_unit">mmHg</string>
    <string name="blood_sugar_unit">mmol/L</string>
    <string name="blood_oxygen_unit">%</string>
    <string name="rate">次/分钟</string>
    <string name="member_manager">成员管理</string>
    <string name="system_setting">系统设置</string>
    <string name="suggestion_feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="data">数据</string>
    <string name="guide">报告</string>
    <string name="warn">告警</string>
    <string name="location">定位</string>
    <string name="measure_data">测量数据</string>
    <string name="my_follow">我关注的</string>
    <string name="follow_me">关注我的</string>
    <string name="member_info">成员信息</string>
    <string name="relationship">关系:</string>
    <string name="phone_number">电话号码:</string>
    <string name="add_measure_data">添加测量数据</string>
    <string name="blood_pressure">血压</string>
    <string name="heart_rate">心率</string>
    <string name="blood_sugar">血糖</string>
    <string name="blood_oxygen">血氧</string>
    <string name="height_and_weight">身高/体重</string>
    <string name="diastolic_pressure">舒张压</string>
    <string name="systolic_pressure">收缩压</string>
    <string name="diastolic_pressure_with_unit">舒张压(mmHG)</string>
    <string name="systolic_pressure_with_unit">收缩压(mmHG)</string>
    <string name="heart_rate_with_unit">次/分</string>
    <string name="height_with_unit">身高(cm)</string>
    <string name="weight_with_unit">体重(kg)</string>
    <string name="measure_time">测量时间:&#160;</string>
    <string name="warn_time">告警时间:&#160;</string>
    <string name="measure_state">测量状态</string>
    <string name="note">备注</string>
    <string name="normal_state">常规</string>
    <string name="after_sports_state">运动后</string>
    <string name="rest_state">静息</string>
    <string name="mobile_phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="complete">完成</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="input_password">请输入6-20位密码</string>
    <string name="register_immedicately">立即注册</string>
    <string name="input_number_pattern_error">手机号码格式错误</string>
    <string name="input_pwd_error">密码错误</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="user_details">个人信息</string>
    <string name="user_base_info">基本资料</string>
    <string name="user_health_info">健康档案</string>
    <string name="name">姓名:</string>
    <string name="phone">电话:</string>
    <string name="id_card">身份证:</string>
    <string name="birthdy">出生日期:</string>
    <string name="sex">性别:</string>
    <string name="nation">民族:</string>
    <string name="Household_status">户籍情况:</string>
    <string name="marital_status">婚姻状况:</string>
    <string name="political_outlook">政治面貌:</string>
    <string name="degree_of_education">文化程度:</string>
    <string name="health">健康状况:</string>
    <string name="blood_type">血型:</string>
    <string name="address">地址详情:</string>
    <string name="physical_exercise">体育锻炼:</string>
    <string name="eating_habits">饮食习惯:</string>
    <string name="dining_ability">进餐能力:</string>
    <string name="combing_ability">梳洗能力:</string>
    <string name="clothing_ability">穿衣能力:</string>
    <string name="toilet_abliity">如厕能力:</string>
    <string name="move_ability">活动能力:</string>
    <string name="interests">兴趣爱好:</string>
    <string name="income_level">收入水平:</string>
    <string name="medical_payment">医疗支付:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="high">偏高</string>
    <string name="low">偏低</string>
    <string name="normal">正常</string>
    <string name="blood_pressure_report">血压报告</string>
    <string name="sleep_report">睡眠质量报告</string>
    <string name="depression_report">抑郁症报告</string>
    <string name="chronic_prostate">慢性前列腺炎报告</string>
    <string name="blood_pressure_warn">血压告警</string>
    <string name="heart_rate_warn">心率告警</string>
    <string name="blood_sugar_warn">血糖告警</string>
    <string name="blood_oxygen_warn">血氧告警</string>
    <string name="sos_warn">SOS告警</string>
    <string name="fence_warn">围栏告警</string>
    <string name="fall_warn">跌倒告警</string>
    <string name="standard_value">标准值:&#160;%1$s</string>
    <string name="result">结论:&#160;</string>
    <string name="measured_value">本次实测值:&#160;%1$s%2$s</string>
    <string name="blood_pressure_measured_value">本次实测值:&#160;舒张压%1$s,收缩压%2$s(mmHg)</string>
    <string name="net_work_error">网络未连接，请连接网络后重试</string>
    <string name="avatar">头像</string>
    <string name="qrcode_card">二维码名片</string>
    <string name="scan_qrcode_description">将二维码放入框内，即可自动扫描</string>
    <string name="change_pwd">修改密码</string>
    <string name="exit">退出登录</string>
    <string name="feedback_label">问题和意见</string>
    <string name="submit">提交</string>
    <string name="feedback_input_desc">请填写您的问题和意见以便我们提供更好的帮助</string>
    <string name="scan_to_add_friend">扫一扫上面的二维码图案，加我为好友</string>
    <string name="qrcode">二维码</string>
    <string name="click_for_details">点击查看详情</string>
    <string name="me">我</string>
    <string name="login_failure">登录失败，请重试</string>
    <string name="confirm_exit_login">是否确认退出登录？</string>
    <string name="input_previous_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认新密码</string>
    <string name="previous_pwd_wrong">原密码输入错误</string>
    <string name="two_password_is_inconsistent">新密码输入不一致</string>
    <string name="msg_details">消息详情</string>
    <string name="accept">同意</string>
    <string name="refuse">拒绝</string>
    <string name="added_already">已通过</string>
    <string name="refused_already">已拒绝</string>
    <string name="source">来源</string>
    <string name="apply_time">申请时间</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="no_data">暂无数据</string>
    <string name="apply_request_sent">你已经关注了该用户，请等待对方同意</string>
    <string name="request_failure">请求失败，请重试</string>
    <string name="follow">关注</string>
    <string name="apply_concern">关注申请</string>
    <string name="reset_pwd_success">密码修改成功</string>
    <string name="reset_pwd_failure">密码修改失败</string>
    <string name="feedback_sent_success">意见已发送</string>
    <string name="feedback_sent_failure">意见发送失败，请检查网络后重试</string>
    <string name="apply_pass">申请通过</string>
    <string name="version_code">版本号:&#160;</string>
    <string name="app_desc">康养管家是一款为用户及家人提供健康数据分析、报告、告警以及定位等丰富的健康和养生服务信息管理的客户端应用。</string>
    <string name="check_update">检查更新</string>
    <string name="feedback_img">图片(选填，最多三张)</string>
    <string name="warn_heart_rate">告警时心率:&#160;</string>
    <string name="warn_location">告警位置:&#160;</string>
    <string name="load_more">加载更多...</string>
</resources>
