<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group_member_manager">
        <item
            android:id="@+id/menu_meember_manager"
            android:icon="@drawable/icon_member"
            android:title="@string/member_manager"/>
    </group>

    <group android:id="@+id/menu_group_settings">
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/icon_setting"
            android:title="@string/system_setting"/>
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/icon_suggestion"
            android:title="@string/suggestion_feedback"/>
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/icon_about"
            android:title="@string/about_us"/>
    </group>

</menu>