<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/add_data_et"
            android:layout_marginTop="30dp"
            android:maxLines="1"
            android:hint="@string/height_with_unit"/>

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/add_data_et"
            android:layout_below="@id/et_height"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:hint="@string/weight_with_unit"/>

        <EditText
            android:id="@+id/et_measure_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/add_data_et"
            android:layout_marginTop="20dp"
            android:editable="false"
            android:focusable="false"
            android:maxLines="1"
            android:layout_below="@id/et_weight"
            android:hint="@string/measure_time"/>

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/add_data_et"
            android:lines="4"
            android:layout_below="@id/et_measure_time"
            android:layout_marginTop="20dp"
            android:hint="@string/note"/>

    </RelativeLayout>

</ScrollView>