<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/toolbar"
        android:layout_height="wrap_content"
        app:title="@string/about_us"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:text="@string/version_code"
        android:drawableTop="@mipmap/ic_launcher"
        android:textSize="16sp"
        android:textColor="@color/name_color"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_app_desc"
        android:layout_below="@id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:textSize="15sp"
        android:textColor="@color/shape_gray"
        android:text="@string/app_desc"/>

    <TextView
        android:id="@+id/tv_update"
        android:layout_below="@id/tv_app_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="12dp"
        android:textColor="@color/name_color"
        android:clickable="true"
        android:text="@string/check_update"
        android:background="@drawable/selector_item_bg"
        android:layout_alignParentLeft="true"/>

</RelativeLayout>