<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/icon_menu">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/toolbar_title"
                android:text="@string/app_name"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/ll_main_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_apply_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/main_page_guide_font"
                android:text="@string/apply_for_visit"
                android:drawableTop="@drawable/icon_apply_visit"/>

            <TextView
                android:id="@+id/tv_evaluation_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/evaluation_guide"
                style="@style/main_page_guide_font"
                android:drawableTop="@drawable/icon_guide"/>

            <TextView
                android:id="@+id/tv_msg_center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_center"
                style="@style/main_page_guide_font"
                android:drawableTop="@drawable/icon_msg_center"/>

            <TextView
                android:id="@+id/tv_warn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/warn_notice"
                style="@style/main_page_guide_font"
                android:drawableTop="@drawable/icon_warn"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_member_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:textColor="@color/name_color"
            android:layout_below="@id/ll_main_item"
            android:layout_marginTop="20dp"
            android:text="@string/member_list"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_below="@id/tv_member_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/menu_side">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>