<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:layout_marginBottom="30dp"
        app:title="@string/register"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mobile_phone_number"
        style="@style/input_layout"
        android:layout_below="@id/toolbar">
    <EditText
        android:id="@+id/et_mobile_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_phone_number"
        android:inputType="number"
        style="@style/input_et"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/divider_phone_number"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/divider_color"
        android:layout_below="@id/input_mobile_phone_number"/>

    <LinearLayout
        android:id="@+id/ll_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_phone_number"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="8">

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_verification_code"
            style="@style/input_et"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/get_verification_code"
            android:layout_gravity="center_vertical"/>



    </LinearLayout>


    <View
        android:id="@+id/divider_verification_code"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/divider_color"
        android:layout_below="@id/ll_verification_code"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        style="@style/input_layout"
        android:layout_below="@id/divider_verification_code">

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        style="@style/input_et"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/divider_password"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/divider_color"
        android:layout_below="@id/input_password"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_below="@id/divider_password"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:background="@drawable/selector_login"
        android:textSize="16sp"/>
</RelativeLayout>