<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/toolbar"
        android:layout_height="wrap_content"
        app:title="@string/suggestion_feedback"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/tv_feedback_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_below="@id/toolbar"
        android:textSize="15sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/feedback_label" />

    <View
        android:id="@+id/divider_feedback_label"
        android:layout_below="@id/tv_feedback_label"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/divider_color" />

    <EditText
        android:id="@+id/et_feedback"
        android:layout_below="@id/divider_feedback_label"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:hint="@string/feedback_input_desc"
        android:gravity="start"
        android:background="@color/white" />

    <View
        android:id="@+id/divider_input_label"
        android:layout_below="@id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/divider_color" />

    <RelativeLayout
        android:id="@+id/rl_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_input_label"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/iv_img_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/name_color"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"
            android:padding="12dp"
            android:text="@string/feedback_img"/>

        <TextView
            android:id="@+id/tv_img_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:textColor="@color/shape_gray"
            android:textSize="16sp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/iv_img_label"
            android:layout_marginTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <View
        android:id="@+id/divider_img"
        android:layout_below="@id/rl_img"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/divider_color" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_below="@id/divider_img"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/selector_login"
        android:textSize="16sp"/>

    </RelativeLayout>