<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_root_ly"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:foreground="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/pop_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/selector_main_item"
                android:textColor="@color/name_color"
                android:text="@string/gallery" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:padding="2dp" />
            <TextView
                android:id="@+id/pop_camera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/selector_main_item"
                android:textColor="@color/name_color"
                android:text="@string/take_photo" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground">
        <TextView
            android:id="@+id/pop_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:textColor="@color/name_color"
            android:background="@drawable/selector_main_item"
            android:text="@string/cancel" />
    </android.support.v7.widget.CardView>
</LinearLayout>